--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   </section>
 
   <section class="slide">
-    <h2>Обо мне</h2>
+    <h2>Вкратце</h2>
     <ul>
-      <li class="next">Меня зовут Андрей Гурылев, я работаю в компании <img src="./i/wrike.png" alt="" style="height: 1em">Wrike</li>
+      <li class="next">Меня зовут Андрей Гурылев, я работаю в компании <img src="./i/wrike.png" alt="" style="height: 1em"><a href="https://www.wrike.com/ru/careers/" target="_blank">Wrike</a></li>
       <li class="next">Я верстаю 9 лет, сейчас зовусь Senior Frontend Developer<br>и чему-то, кажется, научился за эти годы</li>
       <li class="next">Сегодня я поделюсь подробностями о том, как жить после курса вёрстки</li>
       <li class="next">Расскажу, как найти работу, какую работу искать, как там работать и куда дальше пойти за развитием</li>
@@ -79,7 +79,7 @@
       <li class="next">не умеют строить работу с веб-разработчиком</li>
       <li class="next">перед ними неудобно</li>
     </ul>
-    <p class="next">скорее всего вам придётся разрываться между оплачиваемой работой и работой для друзей, чтобы как-то кормить себя</p>
+    <p class="next">скорее всего вам придётся разрываться между оплачиваемой работой и работой для друзей, чтобы хоть как-то кормить себя</p>
   </section>
 
   <section class="slide bad">
@@ -136,14 +136,14 @@
 
   <section class="slide">
     <h2>Напишите резюме грамотно</h2>
-    <p><a href="https://gurylev.github.io/show-resume/">Доклад «Трудоустройство фронтендера»</a><br>Андрея Гурылева с митапа pitercss #7</p>
+    <p class="next"><a href="https://gurylev.github.io/show-resume/">Доклад «Трудоустройство фронтендера»</a><br>Андрея Гурылева с митапа pitercss #7</p>
   </section>
 
   <section class="slide">
     <h2 class="shout grow">Выбор компании</h2>
   </section>
 
-  <section class="slide">
+  <section class="slide bad">
     <h2>Как определить плохие компании?</h2>
     <p>Заранее</p>
     <ul>
@@ -152,13 +152,13 @@
     </ul>
   </section>
 
-  <section class="slide">
+  <section class="slide bad">
     <h2>Как определить плохие компании?</h2>
     <p>На собеседовании</p>
     <ul>
       <li class="next"><b>Толпа</b><br><span class="next">это когда целый офис пришёл посмотреть</span><span class="next">, как вы облажаетесь</span></li>
       <li class="next"><b>Неквалифицированный HR</b><br><span class="next">когда вас приводят в коридор</span><span class="next">, задают абстрактные вопросы на отвлечённые темы</span><span class="next">, не хвалят компанию</span><span class="next">, а только пытаются унизить вас</span></li>
-      <li class="next"><b>HR-программист</b><br><span class="next">если вас пытается по коду собеседовать HR - это очень плохой признак</span></li>
+      <li class="next"><b>HR-программист</b><br><span class="next">если вас пытается по коду собеседовать HR - плохой признак</span></li>
     </ul>
   </section>
 
@@ -173,7 +173,7 @@
 
   <section class="slide">
     <h2>Как попасть в компанию N?</h2>
-    <p>Никак.</p>
+    <p class="next">Никак.</p>
     <ul>
       <li class="next">Не ждите, когда появится подходящая вакансия</li>
       <li class="next">Устройтесь работать куда-то ещё, всегда можно будет уволиться</li>
@@ -187,8 +187,8 @@
   <section class="slide">
     <h2>Как работать</h2>
     <ul>
-      <li class="next">Будьте самостоятельными</li>
-      <li class="next">Умейте спрашивать</li>
+      <li>Будьте самостоятельными</li>
+      <li class="next">Не бойтесь спрашивать</li>
       <li class="next">Постоянно развивайтесь</li>
       <li class="next">Не ленитесь</li>
       <li class="next">Оценивайте работу во времени и деньгах</li>
@@ -201,9 +201,12 @@
     <h2>Планируйте</h2>
     <p class="next">Всё ваше рабочее время в любом месте работы нужно планировать.</p>
     <ul>
-      <li class="next"><b>С разделением времени</b><span class="next">: оценки</span><span class="next">, декомпозиция</span><span class="next">, помидоры</span></li>
-      <li class="next"><b>Без перегрузок, с оценкой</b><span class="next">: Agile</span><span class="next">, Scrum</span><span class="next">, Kanban</span></li>
-      <li class="next"><b>Выполняйте до конца</b><span class="next">: Getting Things Done</span></li>
+      <li class="next"><b>С разделением времени</b><span class="next">: <a href="https://ru.wikipedia.org/wiki/%D0%94%D0%B5%D0%BA%D0%BE%D0%BC%D0%BF%D0%BE%D0%B7%D0%B8%D1%86%D0%B8%D1%8F">декомпозиция</a></span><span class="next">, <a
+              href="https://ru.wikipedia.org/wiki/%D0%9F%D0%BE%D0%BC%D0%B8%D0%B4%D0%BE%D1%80_(%D0%BC%D0%B5%D1%82%D0%BE%D0%B4)">помидоры</a></span><span class="next">,
+        <a href="https://ru.wikipedia.org/wiki/%D0%94%D0%B8%D0%B0%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B0_%D0%93%D0%B0%D0%BD%D1%82%D1%82%D0%B0">диаграмма Гантта</a></span></li>
+      <li class="next"><b>Без перегрузок, с ясностью</b><span class="next">: <a href="https://ru.wikipedia.org/wiki/Agile">Agile</a></span><span class="next">, <a
+              href="https://ru.wikipedia.org/wiki/Scrum">Scrum</a></span><span class="next">, <a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B0%D0%BD%D0%B1%D0%B0%D0%BD_(%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0)">Kanban</a></span></li>
+      <li class="next"><b>Выполняйте до конца</b><span class="next">: <a href="https://ru.wikipedia.org/wiki/Getting_Things_Done">Getting Things Done</a></span></li>
     </ul>
   </section>
 
@@ -231,11 +234,28 @@
   <section class="slide">
     <h2>Куда развиваться дальше</h2>
     <ul>
-      <li class="next">Развивайте фронтенд</li>
-      <li class="next">Читайте статьи</li>
-      <li class="next">Читайте книги</li>
+      <li class="next">Развивайте навыки фронтенда</li>
+      <li class="next">Подписывайтесь на паблики и блоги</li>
+      <li class="next">Читайте статьи и книги</li>
+      <li class="next">Читайте чаты веб-разработчиков типа</li>
       <li class="next">Ходите на митапы и конференции</li>
       <li class="next">Учавствуйте в групповом кодинге и хакатонах</li>
+      <li class="next">Запишитесь на курсы HTML Pro и JS</li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Почитать и посмотреть</h2>
+    <ul>
+      <li class="next">Доклады <a href="https://youtu.be/FxljIvLxUqQ">«36»</a> и <a href="https://www.youtube.com/watch?v=iBHr8gKc5L8">«5 минут»</a> Вадима Макишвили из Яндекса</li>
+      <li class="next">Статья <a href="http://smartsourcing.ru/blogs/personal/1930">20 вопросов для веб-разработчика</a></li>
+      <li class="next"><a href="https://toster.ru/q/26937">Ответ на вопрос на тостере про классические вопросы на собеседованиях</a></li>
+      <li class="next"><a href="https://medium.com/@ermo4enkov/%D1%87%D1%82%D0%BE-%D0%BE%D0%B6%D0%B8%D0%B4%D0%B0%D1%82%D1%8C-%D0%BE%D1%82-%D1%81%D0%BE%D0%B1%D0%B5%D1%81%D0%B5%D0%B4%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D0%BD%D0%B0-%D0%B4%D0%BE%D0%BB%D0%B6%D0%BD%D0%BE%D1%81%D1%82%D1%8C-hmtl-%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%B0%D0%BB%D1%8C%D1%89%D0%B8%D0%BA-junior-frontend-%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%81%D1%82-a916de106283">Что ожидать от собеседования на должность HMTL-Верстальщик</a></li>
+      <li class="next"><a href="https://habrahabr.ru/post/100959/">Десять советов начинающим программистам</a></li>
+      <li class="next"><a href="https://github.com/acilsd/wrk-fet/blob/7d9877e30a27a4ec28e6f2729291f41f4f3361be/README.md">Платиновая шапка платинового треда</a></li>
+      <li class="next"><a href="https://habrahabr.ru/post/201604/">Как работать с неадекватными клиентами?</a></li>
+      <li class="next"><a href="https://habrahabr.ru/post/248441/">8 сортов муды в твоей веб-студии
+      </a></li>
     </ul>
   </section>
 
