add links to communities and chats

--- a/index.html
+++ b/index.html
@@ -245,17 +245,46 @@
   </section>
 
   <section class="slide">
-    <h2>Почитать и посмотреть</h2>
+    <h2>Почитать и посмотреть новичкам</h2>
     <ul>
-      <li class="next">Доклады <a href="https://youtu.be/FxljIvLxUqQ">«36»</a> и <a href="https://www.youtube.com/watch?v=iBHr8gKc5L8">«5 минут»</a> Вадима Макишвили из Яндекса</li>
-      <li class="next">Статья <a href="http://smartsourcing.ru/blogs/personal/1930">20 вопросов для веб-разработчика</a></li>
-      <li class="next"><a href="https://toster.ru/q/26937">Ответ на вопрос на тостере про классические вопросы на собеседованиях</a></li>
-      <li class="next"><a href="https://medium.com/@ermo4enkov/%D1%87%D1%82%D0%BE-%D0%BE%D0%B6%D0%B8%D0%B4%D0%B0%D1%82%D1%8C-%D0%BE%D1%82-%D1%81%D0%BE%D0%B1%D0%B5%D1%81%D0%B5%D0%B4%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D0%BD%D0%B0-%D0%B4%D0%BE%D0%BB%D0%B6%D0%BD%D0%BE%D1%81%D1%82%D1%8C-hmtl-%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%B0%D0%BB%D1%8C%D1%89%D0%B8%D0%BA-junior-frontend-%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%81%D1%82-a916de106283">Что ожидать от собеседования на должность HMTL-Верстальщик</a></li>
-      <li class="next"><a href="https://habrahabr.ru/post/100959/">Десять советов начинающим программистам</a></li>
-      <li class="next"><a href="https://github.com/acilsd/wrk-fet/blob/7d9877e30a27a4ec28e6f2729291f41f4f3361be/README.md">Платиновая шапка платинового треда</a></li>
-      <li class="next"><a href="https://habrahabr.ru/post/201604/">Как работать с неадекватными клиентами?</a></li>
-      <li class="next"><a href="https://habrahabr.ru/post/248441/">8 сортов муды в твоей веб-студии
+      <li>Доклады <a href="https://youtu.be/FxljIvLxUqQ">«36»</a> и <a href="https://www.youtube.com/watch?v=iBHr8gKc5L8">«5 минут»</a> Вадима Макишвили из Яндекса</li>
+      <li>Статья <a href="http://smartsourcing.ru/blogs/personal/1930">20 вопросов для веб-разработчика</a></li>
+      <li><a href="https://toster.ru/q/26937">Ответ на вопрос на тостере про классические вопросы на собеседованиях</a></li>
+      <li><a href="https://medium.com/@ermo4enkov/%D1%87%D1%82%D0%BE-%D0%BE%D0%B6%D0%B8%D0%B4%D0%B0%D1%82%D1%8C-%D0%BE%D1%82-%D1%81%D0%BE%D0%B1%D0%B5%D1%81%D0%B5%D0%B4%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-%D0%BD%D0%B0-%D0%B4%D0%BE%D0%BB%D0%B6%D0%BD%D0%BE%D1%81%D1%82%D1%8C-hmtl-%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%B0%D0%BB%D1%8C%D1%89%D0%B8%D0%BA-junior-frontend-%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%81%D1%82-a916de106283">Что ожидать от собеседования на должность HMTL-Верстальщик</a></li>
+      <li><a href="https://habrahabr.ru/post/100959/">Десять советов начинающим программистам</a></li>
+      <li><a href="https://github.com/acilsd/wrk-fet/blob/7d9877e30a27a4ec28e6f2729291f41f4f3361be/README.md">Платиновая шапка платинового треда</a></li>
+      <li><a href="https://habrahabr.ru/post/201604/">Как работать с неадекватными клиентами?</a></li>
+      <li><a href="https://habrahabr.ru/post/248441/">8 сортов муды в твоей веб-студии
       </a></li>
+    </ul>
+  </section>
+
+  <section class="slide">
+    <h2>Фронтенд-сообщества Петербурга</h2>
+    <ul>
+      <li><a href="https://vk.com/pitercss">pitercss</a><br>HTML, CSS, SVG, типографика, дизайн - доступные доклады</li>
+      <li><a href="https://vk.com/piterjs">PiterJS</a><br>Один лишь только JS, но в трёхкратной порции</li>
+      <li><a href="https://vk.com/spb_frontend">SPB Frontend</a><br>Локальная тусовка верстальщиков и фронтендеров.</li>
+      <li><a href="https://vk.com/nodeschoolspb">NodeSchool SPb</a><br>Ежемесячные бесплатные встречи для обучения JS</li>
+    </ul>
+  </section>
+  
+  <section class="slide">
+    <h2>Чаты, где можно задать вопросы</h2>
+    <p>Почти любые вопросы по фронтенду</p>
+    <ul>
+      <li>Slack:
+        <ul>
+          <li>Веб-стандарты (<a href="http://slack.web-standards.ru/">регистрация</a>, <a href="http://web-standards.slack.com/">вход</a>)</li>
+          <li>SPB Frontend (<a href="http://slack.spb-frontend.ru/">регистрация</a>, <a href="https://spb-frontend.slack.com/messages">вход</a>)</li>
+        </ul>
+      </li>
+      <li>Telegram:
+        <ul>
+          <li><a href="https://t.me/css_live">CSS Live</a></li>
+          <li><a href="https://t.me/frontendweekend">Frontend Weekend</a></li>
+        </ul>
+      </li>
     </ul>
   </section>
 
